# controllino-cmake

./: CMakeLists.txt
arduino/: CMakeLists.txt
arduino/libraries/: CMakeLists.txt
arduino/libraries/Ethernet/: CMakeLists.txt
arduino/libraries/SPI/: CMakeLists.txt
arduino/libraries/Wire/: CMakeLists.txt
cmake/: toolchain.ATmega2560.cmake  toolchain.ATmega328.cmake  toolchain.ATmegaCommon.cmake
cmake/Modules/: ArduinoUtil.cmake
main/: CMakeLists.txt  main.cpp
